# cnn_from_scratch

./: .gitignore  CMakeLists.txt  README.md
data/: test.model_data  trained_model.model_data
include/cnn_from_scratch/: ConnectedLayer.h  DataGenerator.h  Kernel.h  LoadingBar.h  MNISTReader.h  ModelDescription.h  ModelFlow.h  ModelLayer.h  Pooling.h  Serialization.h  SimpleMatrix.h  SubMatrixView.h  SubMatrixViewIterator.h  dim.h  dim3.h  exceptions.h  imageUtil.h  timerConfig.h
include/cnn_from_scratch/CUDA/: CudaSafe.cuh  CudaUniquePtr.cuh
include/cnn_from_scratch/CUDA/Matrix/: convolve.cuh
include/cnn_from_scratch/Layers/: Activation.h  ConnectedLayer.h  Kernel.h  ModelFlow.h  ModelLayer.h  Pooling.h  Softmax.h
include/cnn_from_scratch/Matrix/: MatrixBase.h  MatrixIterator.h  MatrixMath.h  SimpleMatrix.h  SubMatrixView.h  SubMatrixViewIterator.h  dim.h
scripts/: cnn_from_keras.py
src/: MNISTReader.cpp  ModelDescription.cpp  ModelDescription.tpp  SimpleMatrix.cpp  SimpleMatrix.tpp  SubMatrixView.tpp  cudaTest.cu  main.cpp  rvalue_detection.cpp  timerConfig.cpp
src/Layers/: Activation.cpp  ConnectedLayer.cpp  Kernel.cpp  Pooling.cpp  Softmax.cpp
test/: BackwardPassTest.cpp  ForwardPassTest.cpp  MatrixTest.cpp  ModelLayerTest.cpp
